.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Payroll_RTI_API__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used for NI band value mapping in RTI.</description>
    <fields>
        <fullName>xcdhcm__RTI_key_API__c</fullName>
        <description>Used for storing RTI key API.</description>
        <label>RTI key API</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__RTI_value_API__c</fullName>
        <description>Used for storing RTI value API.</description>
        <label>RTI value API</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_year__c</fullName>
        <description>Used for storing tax year.</description>
        <label>Tax year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__XML_attribute__c</fullName>
        <description>Used to store XML attribute name in which NI YTD value needs to send HMRC on the basis of tax year.</description>
        <label>XML attribute</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Payroll RTI API</label>
</CustomObject>